--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import "./utils/vars";
+@import "./utils/variables";
 @import "./components/common";
 @import "./components/logo";
 @import "./components/social";
